fix: fixed bug where the break tag would overrule the z-index of the tooltips from the buttons

--- a/src/resources/css/exp-movie.css
+++ b/src/resources/css/exp-movie.css
@@ -308,6 +308,7 @@ span {
   animation-duration: 1s;
   animation-delay: 3s;
   animation-fill-mode: forwards;
+  margin-top: 40px;
 }
 
 .break-tag {
